# CSES

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pixi.toml
scripts/: create_solution.py
sources/: CMakeLists.txt  main.cpp
sources/solutions/sliding_window_problems/: sliding_window_sum.hpp
sources/solutions/tree_algorithms/: company_queries_1.hpp  subordinates.hpp  tree_diameter.hpp  tree_distances_1.hpp  tree_distances_2.hpp  tree_matching.hpp
sources/test_data/: test_data.hpp
sources/test_data/sliding_window_problems/: sliding_window_problems.hpp  sliding_window_sum.hpp
sources/test_data/tree_algorithms/: company_queries_1.hpp  subordinates.hpp  tree_algorithms.hpp  tree_diameter.hpp  tree_distances_1.hpp  tree_distances_2.hpp  tree_matching.hpp
